--- a/style.css
+++ b/style.css
@@ -15,26 +15,26 @@
 }
 
 * {
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 }
 .container {
-  background-color: #f8f8f8; 
+   
   }
 .header {
-	width: 1500px;
+	width: 1170px;
 	height: 700px;
 	background-color: #abeafa;
 }
 .header_top {
 	height: 135px;
-}
+	}
 .logo {
 	width: 125px;
 	height: 111px;  
 	background: url(images/surfhouse-logo.png);
 	margin-top: 24px;
-	margin-left: 234px;
+	margin-left: 69px;
 	margin-right: 792px;
 	float: left;	
 }
@@ -57,7 +57,7 @@
 	background-color: #fff51f;
 	width: 270px;
 	height: 300px;
-	margin-left: 165px;
+	margin-left: 0px;
 	margin-top: 201px;
 	float: left;
 	}
@@ -85,10 +85,10 @@
 	background-color: none;
 	width: 313px;
 	height: 169px;
-	margin-left: 913px;
+	margin-left: 778px;
 	margin-top: 108px;
 	color: #fff51f;
-}
+	}
 .jp h2 {
 	font: 700 48px / 34px 'ralewaybold';
 	text-transform: uppercase;
@@ -103,7 +103,7 @@
 }
 .buy_now {
 	display: block;
-	margin-left: 916px;
+	margin-left: 751px;
 	margin-top: 62px;
 }
 input {
@@ -111,13 +111,21 @@ input {
 	font: 800 14px 'ralewaybold';
 	text-transform: uppercase;
  }
-.content { 
-
+.content {
+	width: 1170px;
+	background-color: #f8f8f8;	
 }
+/*.content:after {
+content: ".";
+display: block;
+height: 0;
+clear: both;
+visibility: hidden;
+}*/
+
 .content .menu {
 	width: 270px;
-	height: 475px;
-	margin-left: 165px;
+	margin-left: 0;
 	margin-top: -20px; 
 	background-color: #26d2fc;
 }
@@ -154,11 +162,13 @@ input {
 	color: #ffffff;
 }
 .new_products {
-	margin-left: 465px;
-	margin-top: -473px;
+	float: left;
+	margin-left: 300px;
+	margin-top: -470px;
 	width: 870px;
 	background-color: #f8f8f8;
-}
+	overflow: hidden;
+	}
 h3 {
 	padding-left: 23px;
 	padding-top: 23px;
@@ -166,8 +176,11 @@ h3 {
 	text-transform: uppercase;
 	color: #707070;
 }
+.new_products :last-child {
+  margin-right: 0px;
+}
 .prod {
-  float:left;
+	float:left;
   height: 320px;
   width: 270px;
   margin-right: 30px;
@@ -175,15 +188,36 @@ h3 {
 	margin-bottom: 5px;
   background: url(images/bg-prd.png);
 }
-.new_products :last-child {
-  margin-right: 0px;
+.new, .hot{
+	width: 0;
+	height: 0;
+	margin-top: -240px;
+	margin-right: 0px;
+  border: 23px solid transparent;
+	position: relative;
+	z-index: 2;
+}
+.new{
+	border-top: 23px solid #e24602;
+	border-right: 23px solid #e24602;
+	margin-top: -240px;
+}
+.hot{
+	border-top: 23px solid #faef03;
+	border-right: 23px solid #faef03;
+	margin-top: -307px;
+}
+.new p, .hot p {
+	font: 400 9px Roboto;
+	color: #ffffff;
+	text-transform: uppercase;
+	margin-top: -10px;
 }
 .prod_img {
-	padding-left: 10px;
-	padding-top: 10px;
+	margin-right: 10px;
+  margin-top: 10px;
 	width: 250px;
 	height: 230px;
-	overflow: hidden;
 }
 .prod_name {
 	float: left;
@@ -193,6 +227,7 @@ h3 {
 	width: 123px;
 }
 .prod_price {
+	float:right;
 	margin-top: 23px;
 	font: italic 900 18.01px 'robotoblack';
 	padding-right: 10px;
@@ -200,25 +235,85 @@ h3 {
 .prod_discount {
 	font: italic 900 14.01px 'robotoblack';
 	color: #e24602;
+	margin-bottom: 0px;
 	margin-left: 150px;
 }
+.now_is_open {
+	background: #e0e0e0;
+	width: 270px;
+	height: 300px;
+	float: left;
+	margin-top: -244px;
+	}
+.now_is_open p{
+	background: none;
+	height: 98px;
+	width: 109px;
+	margin-left: 142px;
+	margin-top: 129px;
+	font: 800 36px / 36px 'ralewaybold';
+	text-transform: uppercase;
+}
 .top_products {
-	margin-left: 465px;
-	margin-top: 200px;
+	overflow: hidden;
+	margin-left: 300px;
+	padding-top: 43px;
 	width: 871px;
 	background-color: #f8f8f8;
-}
+	}
 .top_products :last-child {
   margin-right: 0px;
 }
 .sale_products {
-	margin-left: 465px;
-	margin-top: 450px;
+	margin-left: 300px;
+	margin-top: 50px;
 	width: 871px;
 	background-color: #f8f8f8;
+	overflow: hidden;
 }
 .sale_products :last-child {
   margin-right: 0px;
+	
+}
+.brand{
+	height: 160px;
+	background-color: #ffffff;
+	margin-top: 30px;
+	}
+.brand p{
+	padding-top: 70px;
+	padding-left: 14px;
+	color:#e0e0e0;
+	font-size: 26px;
+}
+.instagram {
+	background-color: #eaeaea;
+	}
+.instagram div{
+	font: italic 900 22px 'robotoblack';
+	color: #333333;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	padding-right: 420px;
+	padding-left: 420px;
+	}
+.instagram img{
+	float:left;
+	}
+.instagram p{
+	float:right;
+	}
+.instagram ul{
+	margin-top: 30px;
+	padding-bottom: 50px;
+}
+.instagram ul li{
+	list-style: none;
+	display: inline-block;
+	margin-right: 8px;
+}
+.instagram ul li:last-child{
+	margin-right: 0px;
 }
 
 .footer {
